--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~52.0.37",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.4",
+    "expo-localization": "^16.0.1",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
     "react-native": "0.76.7",
