structure themeProvider, login and register screen layout

--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.4",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.2",
-    "expo": "~52.0.37",
+    "expo": "^52.0.40",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.4",
     "expo-localization": "^16.0.1",
@@ -26,6 +27,10 @@
     "@babel/core": "^7.25.2",
     "@types/react": "~18.3.12",
     "babel-plugin-module-resolver": "^5.0.2",
+    "eslint": "^9.23.0",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "prettier": "^3.5.3",
     "typescript": "^5.3.3"
   },
   "private": true
