--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,9 @@
       "eslint:recommended",
       "plugin:react/recommended",
       "plugin:@typescript-eslint/recommended",
-      "plugin:prettier/recommended"
+      "plugin:prettier/recommended",
+      "plugin:react-hooks/recommended"
+      
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -27,6 +29,8 @@
       "semi": ["error", "always"],
       "indent": ["error", "tab"],
       "react/react-in-jsx-scope": "off",
-      "react/prop-types": "off"
+      "react/prop-types": "off",
+      "react-hooks/rules-of-hooks": "error",
+      "react-hooks/exhaustive-deps": "warn"
   }
 }
