--- a/package.json
+++ b/package.json
@@ -11,30 +11,33 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-masked-view/masked-view": "0.3.2",
     "@react-native-picker/picker": "^2.11.0",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.2",
-    "expo": "^52.0.40",
+    "expo": "~53.0.8",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-localization": "^16.0.1",
-    "expo-status-bar": "~2.0.1",
-    "react": "18.3.1",
-    "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.25.0",
+    "expo-status-bar": "~2.2.3",
+    "react": "~19.0.0",
+    "react-native": "^0.79.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
     "react-native-reanimated": "^3.17.2",
     "react-native-safe-area-context": "^5.3.0",
     "react-native-screens": "^4.10.0",
+    "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "eslint": "^9.23.0",
