--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.2",
-    "expo": "~53.0.8",
+    "expo": "~53.0.9",
     "expo-app-loading": "^2.1.1",
     "expo-font": "^13.0.4",
     "expo-linear-gradient": "~14.1.4",
@@ -33,6 +33,7 @@
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
+    "socket.io-client": "^4.8.1",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
