--- a/package.json
+++ b/package.json
@@ -9,27 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-masked-view/masked-view": "0.3.2",
-    "@react-native-picker/picker": "^2.11.0",
+    "@react-native-picker/picker": "2.11.1",
     "@react-navigation/bottom-tabs": "^7.3.9",
     "@react-navigation/native": "^7.1.5",
     "@react-navigation/stack": "^7.1.2",
     "axios": "^1.8.2",
-    "expo": "~53.0.9",
+    "expo": "~54.0.0",
     "expo-app-loading": "^2.1.1",
-    "expo-font": "^13.0.4",
-    "expo-linear-gradient": "~14.1.4",
-    "expo-localization": "^16.0.1",
-    "expo-status-bar": "~2.2.3",
-    "react": "~19.0.0",
-    "react-native": "^0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
+    "expo-font": "~14.0.8",
+    "expo-linear-gradient": "~15.0.7",
+    "expo-localization": "~17.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-loading-spinner-overlay": "^3.0.1",
-    "react-native-reanimated": "^3.17.2",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.10.0",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-scripts": "^2.0.1",
     "react-native-vector-icons": "^10.2.0",
     "react-navigation": "^5.0.0",
@@ -38,15 +38,16 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "babel-preset-expo": "^54.0.3",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
     "eslint-plugin-react-hooks": "^5.2.0",
     "prettier": "^3.5.3",
-    "typescript": "^5.3.3"
+    "typescript": "~5.9.2"
   },
   "private": true
 }
