--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/react-native": "^0.73.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "babel-preset-expo": "^54.0.3",
+    "baseline-browser-mapping": "^2.9.14",
     "eslint": "^9.23.0",
     "eslint-config-prettier": "^10.1.1",
     "eslint-plugin-prettier": "^5.2.5",
