--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-font": "~14.0.8",
     "expo-linear-gradient": "~15.0.7",
     "expo-localization": "~17.0.7",
+    "expo-secure-store": "~15.0.8",
     "expo-status-bar": "~3.0.8",
     "react": "19.1.0",
     "react-native": "0.81.4",
